<resources>
    <string name="app_name">Jentik Rumah</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">Profil</string>
    <string name="beranda">Beranda</string>
    <string name="pantauan">Pantauan</string>
    <string name="progress">Progress</string>
    <string name="riwayat">Riwayat</string>
    <string name="Tentang">Tentang Aplikasi</string>
    <string name="Keluar">Keluar</string>
    <string name="verif">Verifikasi User</string>
</resources>
