<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.joshua.r0th.jentikrumah.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
    android:id="@+id/nav_verif"
    android:name="com.joshua.r0th.jentikrumah.ui.verifikasi.verifikasi_ktp"
    android:label="@string/verif"
    tools:layout="@layout/fragment_verifikasi_admin"/>

    <fragment
        android:id="@+id/nav_pantuan"
        android:name="com.joshua.r0th.jentikrumah.ui.pantauan.PantauanFragment"
        android:label="@string/pantauan"
        tools:layout="@layout/fragment_pantauan" />

    <fragment
        android:id="@+id/nav_riwayat"
        android:name="com.joshua.r0th.jentikrumah.ui.riwayat.RiwayatFragment"
        android:label="@string/riwayat"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.joshua.r0th.jentikrumah.ui.about.AboutFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.joshua.r0th.jentikrumah.ui.logout.LogoutFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_logout" />
</navigation>